<resources>
    <string name="app_name">Todo List App</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="Username">Username</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Confirm">Confirm Password</string>
    <string name="NewTask">Enter new task</string>
    <string name="AddTask">Add Task</string>
    <string name="Save">Save</string>
    <string name="back2login">Back to Login</string>
    <string name="logout">Logout</string>
    <string name="haveAccount">Have an account?</string>
    <string name="NotHaveAccount">Don\'t have an account?</string>
    <string name="Task">Task 1</string>
</resources>