<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Register.RegisterActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Register"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/colorBlack2"
        android:layout_marginBottom="72dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:hint="@string/Email"
        android:autofillHints="Email"
        android:textColorHint="@color/silver"
        android:padding="16dp"
        android:layout_marginHorizontal="16dp"
        android:id="@+id/inputEmail"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/Password"
        android:autofillHints="Password"
        android:textColorHint="@color/silver"
        android:singleLine="true"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:padding="16dp"
        android:id="@+id/inputPassword"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/Register"
        android:layout_marginTop="56dp"
        android:layout_marginHorizontal="16dp"
        android:onClick="registerOnClick"
        android:id="@+id/registerBtn"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/haveAccount"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/silver"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Login"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:layout_marginStart="4dp"
            android:onClick="backToLoginOnClick"
            android:id="@+id/tvRegister"/>

    </LinearLayout>


</LinearLayout>