<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Login.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginBottom="72dp"
        android:textColor="@color/colorBlack2"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:id="@+id/etEmail"
        android:hint="@string/Email"
        android:textColorHint="@color/silver"
        android:layout_marginHorizontal="16dp"
        android:padding="16dp"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:singleLine="true"
        android:id="@+id/etPass"
        android:hint="@string/Password"
        android:textColorHint="@color/silver"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:padding="16dp"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        android:layout_marginTop="56dp"
        android:layout_marginHorizontal="16dp"
        android:onClick="loginOnClick"/>

<!--    <Button-->
<!--        android:id="@+id/btnReg"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/Register"-->
<!--        android:layout_marginTop="16dp"-->
<!--        android:layout_marginHorizontal="16dp"-->
<!--        android:onClick="registerOnClick"/>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Don't Have an account?"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/silver"/>

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Register"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:layout_marginStart="4dp"
            android:onClick="registerOnClick"/>

    </LinearLayout>
</LinearLayout>